refactor entity, create base activity to avoid every time to create binding, create professor screen, create ui of professor with fake data and no actions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".screens.professorActivities.ProfessorActivity"
-            android:exported="true" />
+            android:name=".screens.professor.ProfessorActivity"
+            android:exported="true"
+            android:theme="@style/Theme.EduTaskerDark"/>
 
     </application>
 
