--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:name=".screens.login.LoginMainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.EduTaskerDark">
+            android:theme="@style/Theme.EduTasker">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,10 +30,10 @@
         <activity
             android:name=".screens.professor.ProfessorActivity"
             android:exported="true"
-            android:theme="@style/Theme.EduTaskerDark" />
+            android:theme="@style/Theme.EduTasker" />
         <activity
             android:name=".screens.student.StudentActivity"
             android:exported="true"
-            android:theme="@style/Theme.EduTaskerDark" />
+            android:theme="@style/Theme.EduTasker" />
     </application>
 </manifest>
