fix crashes, do refactors, do activity notifications, do when user tap on an notifiacation to open the task

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,5 +35,9 @@
             android:name=".screens.student.StudentActivity"
             android:exported="true"
             android:theme="@style/Theme.EduTasker" />
+        <activity
+            android:name=".screens.notification.NotificationActivity"
+            android:exported="true"
+            android:theme="@style/Theme.EduTasker" />
     </application>
 </manifest>
